--- a/ETL/requirements-etl.txt
+++ b/ETL/requirements-etl.txt
@@ -3,7 +3,7 @@ aiohttp==3.7.4.post0
 aioitertools==0.7.1
 async-timeout==3.0.1
 attrs==21.2.0
-boto3==1.17.69
+# boto3==1.17.69
 botocore==1.20.49
 certifi==2020.12.5
 chardet==4.0.0
